--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.1.3",
     "nodemailer": "^7.0.12",
+    "passport": "^0.7.0",
+    "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
